add docs examples
